# pyapollon

./: .gitignore  README.md  pyproject.toml
notebooks/: notes.ipynb
pyapollon/: basic_structures.py  model_handler.py  structure_classes.py  utils.py
