[tool.poetry]
name = "pyapollon"
version = "0.1.0"
description = "Package containing utils for ML-Tasks"
authors = ["Ezra Tampubolon <ezra.tampubolon@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
